--- a/gatos-e-cafes--main/style.css
+++ b/gatos-e-cafes--main/style.css
@@ -1,15 +1,3 @@
-*{
-  margin:  0;
-  padding: 0;
-}
-.cabecalho{
+body{
   background-color: darkorange;
-  display:flex;
-  justify-content:space-around;
-  align-items;center;
-  padding: 30px 0;
-}
-.cabecalho-item{
-  display:inline-block;
-  padding: 0 25px;
 }
