--- a/gatos-e-cafes--main/style.css
+++ b/gatos-e-cafes--main/style.css
@@ -1,3 +1,19 @@
-body{
-  background-color: darkorange;
+*{
+  margin:  0;
+  padding: 0;
+}
+.cabecalho{
+  background-color: darkgoldenrod;
+  color:black;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 0 25px;
+}
+.cabecalho-item{
+  display:inline-block;
+  padding: 0 25px;
+}
+.cabecalho-item{
+  width: 25%;
 }
